bug: Fixed overflow of content in modal

--- a/src/Components/components.css
+++ b/src/Components/components.css
@@ -31,7 +31,7 @@ body.noScroll {
 .overlay {
     background: rgba(49,49,49,0.8);
 }
-.modal-content {
+.modal-box-wrapper {
     position: absolute;
     top: 40%;
     left: 50%;
@@ -41,7 +41,7 @@ body.noScroll {
     padding: 14px;
     border-radius: 3px;
     max-width: 600px;
-    min-width: 300px;
+    min-width: 200px;
 }
 .modal-body {
     display: flex;
@@ -51,6 +51,7 @@ body.noScroll {
 .modal-description {
     font-weight: lighter;
     max-height: 80px;
+    max-width: 300px;
     overflow: scroll;
 }
 .modal p {
